--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
 
 <html>
 	<head>
-		<title>Dimension by HTML5 UP</title>
+		<title>Isaac's Heavily Redacted Portfolio (s/o SpaceX)</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
+	<style>
+		img {color:white}
+			.left{float: left; border: 1px dotted black; margin: 0px 15px 0px 0px;}
+			.right{float: right; border: 1px dotted black; margin: 0px 15px 0px 0px;}
+	</style>
 	<body class="is-preload">
 
 		<!-- Wrapper -->
@@ -40,17 +45,18 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Hi, I'm Isaac.</h2>
-								<p>As a soon-to-be graduate from the University of California, Los Angeles with a Bachelor of Science in Physiological Science (Spring 2023), I bring a unique blend of medical knowledge and practical experience to the table. I currently work as a Medical Intern at Space Exploration Technologies, where I've been instrumental in developing medical equipment and training programs for commercial astronauts. My expertise lies in operations management, medical equipment engineering, and product development, which I have honed through hands-on experience and a focus on human factors, intelligent equipment engineering, and modern digital media design.</p> 
+								<p><img src="images/squareheadshot.png" width="200" height="200" class="left"> As a soon-to-be graduate from the University of California, Los Angeles with a Bachelor of Science in Physiological Science (Spring 2023), I bring a unique blend of medical knowledge and practical experience to the table. I currently work as a Medical Intern at Space Exploration Technologies (SpaceX), where I've been instrumental in developing medical equipment and training programs for commercial astronauts. My expertise lies in operations management, medical equipment engineering, and product development, which I have honed through hands-on experience and a focus on human factors, intelligent equipment engineering, and modern digital media design.</p> 
 								<p>With a background in clinical shadowing and engineering, I am eager to leverage my skills and knowledge in a fast-paced environment where I can make a difference using cutting-edge medical technology. My passion lies in helping others, and I'm excited to continue to grow and develop my skills to better serve those in need.</p>
 							</article>
 
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
-								<p>At Space Exploration Technologies (SpaceX), I have honed my skills in persistence and commitment to excellence in every role I’ve taken on. Starting as a member of the COVID-19 testing team, I demonstrated reliability and sought opportunities for growth, eventually volunteering for a challenging research qualification campaign leading up to the groundbreaking Inspiration 4 mission. Following the successful campaign, I assumed responsibility for research qualification and spearheaded the development and qualification of the SpaceX Medical Kit.</p>
+								<span class="image main"><img src="images/pic01.jpeg" alt="" /></span>
+								<p>At Space Exploration Technologies (SpaceX), I have honed my skills in persistence and commitment to excellence in every role I’ve taken on. Starting as a member of the COVID-19 testing team, I demonstrated reliability and sought opportunities for growth, eventually volunteering for a challenging research qualification campaign leading up to the groundbreaking Inspiration 4 mission. Following the successful campaign, I assumed responsibility for research qualification and spearheaded the development and qualification of the SpaceX Medical Kit.								</p>
 								<p>Through these experiences, I gained a strong understanding of the aerospace industry and the significance of ensuring safety and readiness in every aspect of space missions. These projects further solidified my passion for making a meaningful impact in the space industry and other forward-thinking industries.</p>
 								<p>In my time at SpaceX, my major projects have included:</p>
-								<p><blockquote><b>Medical Hardware Qualification and Training</b></blockquote></p>
+								<h3><b>- Medical Hardware Qualification and Training</b></h3>
 								<ul style= "margin-left: 50px; line-height:180%">
 									<li>Managed INSCOP (on-orbit anti-emetic) research project for the all-civilian Inspiration 4 mission (Summer/Fall 2021)</li>
 									<li>Medical Kit flight build and training for Axiom-1 mission, working with NASA counterparts to qualify to ISS toxicity standard (Winter 2022)</li>
@@ -59,12 +65,12 @@
 									<li>Deleted major requirement for flight pharmaceutical qualification testing, removing ~35 parts from scope (Fall 2022)</li>
 									<li>Leading overhaul of med equipment procurement and qualification for simplified and accelerated flight readiness, navigating DEA compliance (Fall 2022-Present)</li>
 								</ul>
-								<p><blockquote><b>Research Hardware - Qualification Ownership</b></blockquote></p>
+								<h3><b>- Research Hardware - Qualification Ownership</b></h3>
 								<ul style= "margin-left: 50px; line-height:180%">
 									<li>Selected for and led a research equipment qual sprint for the all-civilian Inspiration 4 mission, qualifying 30 pieces of hardware in 13 days and enabling 8 successful research projects (Fall 2021)</li>
 									<li>Developing receipt pathway and research qual campaign for Polaris Dawn while assisting with research development; responsible for ~75 research parts in 12 research projects (Spring 2022-Present)</li>
 								</ul>
-								<p><blockquote><b>Risk Buyoff Campaign (SpaceX, 2022)</b></blockquote></p>
+								<h3><b>- Other</b></h3>
 								<ul style= "margin-left: 50px; line-height:180%">
 									<li>Poster Presenter at the 2022 HRP-IWS conference where I discussed our 2021 INSCOP study focus, efficacy data, and lessons learned. (Spring 2022)</li>
 									<li>Facilitated early development of company-wide COVID testing program automation, making testing accessible for 10,000 SpaceX employees across our 4 primary facilities. (Fall 2021)</li>
@@ -75,23 +81,25 @@
 						<!-- Education -->
 							<article id="education">
 								<h2 class="major">Education</h2>
+								<span class="image main"><img src="images/ucla.jpg" alt="" /></span>
 								<p>I am currently pursuing a degree in Physiological Science at UCLA, with an expected graduation in June 2023. My academic achievements include being recognized as a Gold Shield Scholar and receiving the Alumni Scholarship from UCLA's Alumni Association.</p>
-								<p>To complement my studies, I have obtained an IRB certificate in Biomedical Research and certifications in Basic Life Saving and CPR from the Red Cross. These experiences have played a significant role in my growth as a medical and research professional and have inspired me to pursue these areas even further. I’m eager to continue developing my skills and knowledge in these fields throughout my time in the industry.</p>
+								<p>Outside of academic pursuits, I am actively engaged in a variety of extracurricular activities, including a varsity skipper role on the UCLA Club Sailing team, avid support of UCLA athletic programs as a member of the Den Ops club, and part-time photography focusing on athletic events. I have also served as a dedicated member of the Student-Alumni Association, contributing to the planning, promotion, and successful execution of various student-initiated events. My notable accomplishments include the marketing and event coordination of Spring Sing 2022 — a campus-wide student showcase for over 3000 fans — as well as bi-monthly Alumni Networking events to prepare students for the workforce.</p>
+								<p>To complement my studies, I have obtained an IRB certificate in Biomedical Research and certifications in Basic Life Saving and CPR from the Red Cross. These experiences have played a significant role in my growth as a medical and research professional and have inspired me to pursue these areas even further. I’m eager to continue developing my skills and knowledge in these fields throughout my years in the industry.</p>
 							</article>
 
 						<!-- Contacts -->
 							<article id="contacts">
 								<h2 class="major">Contacts</h2>
 								<p>If you have any further questions, feel free to reach out to me at <u><b>702-423-2116</b></u> or send me an <a href="ericsonisaac@gmail.com"><u><b>email</b></u></a>.</p>
-								<h3 class="major">References</h3>
+								<h3>References</h3>
 								<p style="text-indent: 50px;">
-									<a href="anil.menon@spacex.com"><u><b>Anil Menon</b></u></a> - former Medical Director at SpaceX
+									<a href="anil.menon@spacex.com"><u><b>- Anil Menon</b></u></a> - former Medical Director at SpaceX
 									</p>
 								<p style="text-indent: 50px;">
-									<a href="diana.dayal@spacex.com"><u><b>Diana Dayal</b></u></a> - current direct supervisor and Medical Operations Lead at SpaceX
+									<a href="diana.dayal@spacex.com"><u><b>- Diana Dayal</b></u></a> - current direct supervisor and Medical Operations Lead at SpaceX
 									</p>
 								<p style="text-indent: 50px;">
-									<a href="jaime.mateus@spacex.com"><u><b>Jaime Mateus</b></u></a> - current Medical Director at SpaceX
+									<a href="jaime.mateus@spacex.com"><u><b>- Jaime Mateus</b></u></a> - current Medical Director at SpaceX
 									</p>
 							</article>
 
