--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>ISAAC ERICSON</h1>
-								<p>HEALTH SCIENCES, EQUIPMENT ENGINEERING, AND DESIGN PROFESSIONAL</p>
+								<p>HEALTH SCIENCES AND EQUIPMENT ENGINEERING PROFESSIONAL</p>
 							</div>
 						</div>
 						<nav>
@@ -46,7 +46,7 @@
 							<article id="intro">
 								<h2 class="major">Hi, I'm Isaac.</h2>
 								<p><img src="images/squareheadshot.png" width="200" height="200" class="left"> As a soon-to-be graduate from the University of California, Los Angeles with a Bachelor of Science in Physiological Science (Spring 2023), I bring a unique blend of medical knowledge and practical experience to the table. I currently work as a Medical Intern at Space Exploration Technologies (SpaceX), where I've been instrumental in developing medical equipment and training programs for commercial astronauts. My expertise lies in operations management, medical equipment engineering, and product development, which I have honed through hands-on experience and a focus on human factors, intelligent equipment engineering, and modern digital media design.</p> 
-								<p>With a background in clinical shadowing and engineering, I am eager to leverage my skills and knowledge in a fast-paced environment where I can make a difference using cutting-edge medical technology. My passion lies in helping others, and I'm excited to continue to grow and develop my skills to better serve those in need.</p>
+								<p>With a strong background in medicine, clinical experrience, and engineering, I am eager to leverage my skills and knowledge in a fast-paced environment where I can make a difference using cutting-edge medical technology. My passion lies in helping others, and I'm excited to continue to grow and develop my skills to better serve those in need.</p>
 							</article>
 
 						<!-- Work -->
@@ -83,7 +83,7 @@
 								<h2 class="major">Education</h2>
 								<span class="image main"><img src="images/ucla.jpg" alt="" /></span>
 								<p>I am currently pursuing a degree in Physiological Science at UCLA, with an expected graduation in June 2023. My academic achievements include being recognized as a Gold Shield Scholar and receiving the Alumni Scholarship from UCLA's Alumni Association.</p>
-								<p>Outside of academic pursuits, I am actively engaged in a variety of extracurricular activities, including a varsity skipper role on the UCLA Club Sailing team, avid support of UCLA athletic programs as a member of the Den Ops club, and part-time photography focusing on athletic events. I have also served as a dedicated member of the Student-Alumni Association, contributing to the planning, promotion, and successful execution of various student-initiated events. My notable accomplishments include the marketing and event coordination of Spring Sing 2022 — a campus-wide student showcase for over 3000 fans — as well as bi-monthly Alumni Networking events to prepare students for the workforce.</p>
+								<p>Outside of academic pursuits, I am actively engaged in a variety of extracurricular activities, including as a varsity skipper on the UCLA Club Sailing team, an avid fan of UCLA athletic programs as a member of the Den Ops club, and as a part-time photographer focusing on athletic events. I have also served as a dedicated member of the Student-Alumni Association, contributing to the planning, promotion, and successful execution of various student-initiated events. My notable accomplishments include the marketing and event coordination of Spring Sing 2022 — a campus-wide tatlent showcase for over 3000 students — as well as bi-monthly Alumni Networking events to prepare students for the workforce.</p>
 								<p>To complement my studies, I have obtained an IRB certificate in Biomedical Research and certifications in Basic Life Saving and CPR from the Red Cross. These experiences have played a significant role in my growth as a medical and research professional and have inspired me to pursue these areas even further. I’m eager to continue developing my skills and knowledge in these fields throughout my years in the industry.</p>
 							</article>
 
@@ -93,10 +93,10 @@
 								<p>If you have any further questions, feel free to reach out to me at <u><b>702-423-2116</b></u> or send me an <a href="ericsonisaac@gmail.com"><u><b>email</b></u></a>.</p>
 								<h3>References</h3>
 								<p style="text-indent: 50px;">
-									<a href="anil.menon@spacex.com"><u><b>- Anil Menon</b></u></a> - former Medical Director at SpaceX
+									<a href="anil.menon@spacex.com"><u><b>- Anil Menon</b></u></a> - former Medical Director at SpaceX; current NASA Astronaut Candidate
 									</p>
 								<p style="text-indent: 50px;">
-									<a href="diana.dayal@spacex.com"><u><b>- Diana Dayal</b></u></a> - current direct supervisor and Medical Operations Lead at SpaceX
+									<a href="diana.dayal@spacex.com"><u><b>- Diana Dayal</b></u></a> - direct supervisor and current Medical Ops Lead at SpaceX
 									</p>
 								<p style="text-indent: 50px;">
 									<a href="jaime.mateus@spacex.com"><u><b>- Jaime Mateus</b></u></a> - current Medical Director at SpaceX
