--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Hi, I'm Isaac.</h2>
-								<p><img src="images/squareheadshot.png" width="200" height="200" class="left"> As a soon-to-be graduate from the University of California, Los Angeles with a Bachelor of Science in Physiological Science (Spring 2023), I bring a unique blend of medical knowledge and practical experience to the table. I currently work as a Medical Intern at Space Exploration Technologies (SpaceX), where I've been instrumental in developing medical equipment and training programs for commercial astronauts. My expertise lies in operations management, medical equipment engineering, and product development, which I have honed through hands-on experience and a focus on human factors, intelligent equipment engineering, and modern digital media design.</p> 
-								<p>With a strong background in medicine, clinical experrience, and engineering, I am eager to leverage my skills and knowledge in a fast-paced environment where I can make a difference using cutting-edge medical technology. My passion lies in helping others, and I'm excited to continue to grow and develop my skills to better serve those in need.</p>
+								<p><img src="images/squareheadshot.png" width="200" height="200" class="left"> As a soon-to-be graduate from the University of California, Los Angeles with a Bachelor of Science in Physiological Science (Spring 2023), I bring a unique blend of medical knowledge and practical experience to the table. I worked as a Medical Intern at Space Exploration Technologies (SpaceX) from April 2021 through May 2023, where I was instrumental in developing medical equipment and training programs for commercial astronauts. My expertise lies in operations management, medical equipment engineering, and product development, which I have honed through hands-on experience and a focus on human factors, intelligent equipment engineering, and modern digital media design.</p> 
+								<p>With a strong background in medicine, clinical experrience, and engineering, I am eager to leverage my skills and knowledge in a fast-paced environment where I can make a difference using cutting-edge medical technology. My passion lies in helping others, and I'm excited to continue to grow and develop my skills to better serve those around me.</p>
 							</article>
 
 						<!-- Work -->
@@ -55,7 +55,7 @@
 								<span class="image main"><img src="images/pic01.jpeg" alt="" /></span>
 								<p>At Space Exploration Technologies (SpaceX), I have honed my skills in persistence and commitment to excellence in every role I’ve taken on. Starting as a member of the COVID-19 testing team, I demonstrated reliability and sought opportunities for growth, eventually volunteering for a challenging research qualification campaign leading up to the groundbreaking Inspiration 4 mission. Following the successful campaign, I assumed responsibility for research qualification and spearheaded the development and qualification of the SpaceX Medical Kit.								</p>
 								<p>Through these experiences, I gained a strong understanding of the aerospace industry and the significance of ensuring safety and readiness in every aspect of space missions. These projects further solidified my passion for making a meaningful impact in the space industry and other forward-thinking industries.</p>
-								<p>In my time at SpaceX, my major projects have included:</p>
+								<p>In my time at SpaceX, my major projects included:</p>
 								<h3><b>- Medical Hardware Qualification and Training</b></h3>
 								<ul style= "margin-left: 50px; line-height:180%">
 									<li>Managed INSCOP (on-orbit anti-emetic) research project for the all-civilian Inspiration 4 mission (Summer/Fall 2021)</li>
