--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Isaac's Heavily Redacted Portfolio (s/o SpaceX)</title>
+		<title>Isaac's Redacted Portfolio (thanks, ITAR)</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
